# try6

./: .gitattributes  .gitignore  20_linux_xen  ABOUT-NLS  AUTHORS  BUGS  COPYING  INSTALL  INSTALL.holy  Makefile  Makefile.am  Makefile.in  Makefile.util.am  Makefile.util.def  Makefile.utilgcry.def  README  README.md  THANKS  TODO  _header  _linux_  _prober_  acinclude.m4  aclocal.m4  autogen.sh  bootstrap  bootstrap.conf  config-util.h  config-util.h.in  config-util.h.in~  config.h  config.h.in  config.status  configure.ac  configure.sh  configure~  coreboot.cfg  garbage-gen  geninit.sh  gentpl.py  (+21 more)
holy-core/: Makefile.am  Makefile.core.am  Makefile.core.def  Makefile.in  gdb_holy  genemuinitheader.sh  gensyminfo.sh.in  gensymlist.sh  gentrigtables.c  gmodule.pl.in  gnulib-fix-gcc7-fallthrough.diff  gnulib-no-abort.diff  gnulib-no-gets.diff  holy_script.tab.h  holy_script.yy.h  modinfo.sh  modinfo.sh.in  symlist.h  trigtables.c
holy-core/.deps-util/: libholymods_a-unidata.Po
holy-core/boot/decompressor/: minilib.c
holy-core/boot/mips/: startup_raw.S
holy-core/boot/powerpc/: bootinfo.txt.in  holy.chrp.in
holy-core/bus/: bonito.c  cs5536.c
holy-core/bus/emu/: pci.c
holy-core/bus/usb/: ehci.c  uhci.c  usbhub.c
holy-core/commands/: acpihalt.c  boottime.c  configfile.c  date.c  echo.c  eval.c  extcmd.c  file64.c  fwconfig.c  gptsync.c  hashsum.c  help.c  hexdump.c  keylayouts.c  ls.c  lsacpi.c  lsmmap.c  memrw.c  minicmd.c  nativedisk.c  parttool.c  probe.c  read.c  reboot.c  regexp.c  search.c  search_disk_uuid.c  search_file.c  search_part_uuid.c  sleep.c  smbios.c  terminal.c  test.c  testload.c  tr.c  true.c  wildcard.c
holy-core/commands/.deps-util/: holy_file-file.Po  holy_file-file32.Po  holy_file-file64.Po  libholykern_a-extcmd.Po  libholymods_a-blocklist.Po  libholymods_a-ls.Po  libholymods_a-macbless.Po  libholymods_a-testload.Po  libholymods_a-xnu_uuid.Po
holy-core/commands/arc/: lsdev.c
holy-core/commands/efi/: loadbios.c  lsefi.c  lsefimmap.c  lsefisystab.c  lssal.c  smbios.c
holy-core/commands/i386/: cmosdump.c  cpuid.c
holy-core/commands/ieee1275/: suspend.c
holy-core/commands/xen/: lsxen.c
holy-core/disk/: ata.c  dmraid_nvidia.c  host.c  ldm.c  mdraid_linux.c  mdraid_linux_be.c  pata.c  raid5_recover.c  scsi.c  usbms.c
holy-core/disk/.deps-util/: holy_file-host.Po  holy_fstest-host.Po  holy_install-host.Po  holy_mkrescue-host.Po  holy_mkstandalone-host.Po  holy_mount-host.Po  holy_render_label-host.Po  holy_syslinux2cfg-host.Po  libholykern_a-AFSplitter.Po  libholykern_a-cryptodisk.Po  libholykern_a-diskfilter.Po  libholykern_a-geli.Po  libholykern_a-ldm.Po  libholykern_a-luks.Po  libholymods_a-dmraid_nvidia.Po  libholymods_a-loopback.Po  libholymods_a-lvm.Po  libholymods_a-mdraid1x_linux.Po  libholymods_a-mdraid_linux.Po  libholymods_a-mdraid_linux_be.Po  libholymods_a-raid5_recover.Po  libholymods_a-raid6_recover.Po
holy-core/disk/arc/: arcdisk.c
holy-core/disk/ieee1275/: ofdisk.c
holy-core/efiemu/: loadcore.c  loadcore_common.c  main.c  pnvram.c  prepare.c  prepare32.c
holy-core/efiemu/i386/: loadcore64.c
holy-core/efiemu/runtime/: config.h  efiemu.c
holy-core/font/.deps-util/: libholymods_a-font.Po
holy-core/fs/: affs.c  afs.c  archelp.c  bfs.c  btrfs.c  cpio.c  exfat.c  ext2.c  fat.c  fshelp.c  iso9660.c  jfs.c  minix2.c  minix2_be.c  minix3.c  reiserfs.c  romfs.c  udf.c  ufs2.c  ufs_be.c
holy-core/fs/.deps-util/: libholykern_a-archelp.Po  libholykern_a-proc.Po  libholymods_a-affs.Po  libholymods_a-afs.Po  libholymods_a-bfs.Po  libholymods_a-btrfs.Po  libholymods_a-cbfs.Po  libholymods_a-cpio.Po  libholymods_a-cpio_be.Po  libholymods_a-exfat.Po  libholymods_a-ext2.Po  libholymods_a-fat.Po  libholymods_a-fshelp.Po  libholymods_a-hfs.Po  libholymods_a-hfsplus.Po  libholymods_a-hfspluscomp.Po  libholymods_a-iso9660.Po  libholymods_a-jfs.Po  libholymods_a-minix.Po  libholymods_a-minix2.Po  libholymods_a-minix2_be.Po  libholymods_a-minix3.Po  libholymods_a-minix3_be.Po  libholymods_a-minix_be.Po  libholymods_a-newc.Po  libholymods_a-nilfs2.Po  libholymods_a-ntfs.Po  (+12 more)
holy-core/gdb/: gdb.c
holy-core/gettext/: gettext.c
holy-core/gfxmenu/: gui_circular_progress.c  gui_progress_bar.c  gui_util.c
holy-core/gnulib/: Makefile.am  alloca.c  arg-nonnull.h  argp-ba.c  argp-fs-xinl.c  argp-parse.c  argp-pv.c  argp.h  asnprintf.c  basename-lgpl.c  btowc.c  config.charset  configmake.h  dirname-lgpl.c  dirname.h  dosname.h  errno.in.h  float+.h  float.c  fnmatch.in.h  fnmatch_loop.c  getdelim.c  getopt.h  getopt1.c  gettext.h  itold.c  langinfo.h  langinfo.in.h  localcharset.c  localcharset.h  locale.h  localeconv.c  mbsrtowcs-state.c  memchr.c  msvc-inval.h  msvc-nothrow.h  printf-args.c  printf-parse.c  progname.c  progname.h  (+31 more)
holy-core/hello/: hello.c
holy-core/hook/: datehook.c
holy-core/io/: lzopio.c
holy-core/kern/: acpi.c  command.c  compiler-rt.c  disk.c  disk_common.c  dl.c  elf.c  main.c  misc.c  mm.c  parser.c  rescue_reader.c  time.c
holy-core/lib/: cmdline.c  cmos_datetime.c  crc.c  disk.c  division.c  fake_module.c  getline.c  hexdump.c  pbkdf2.c  relocator.c
holy-core/loader/: linux.c  lzss.c  macho.c  machoXX.c  multiboot.c  xnu_resume.c
holy-core/mmap/: mmap.c
holy-core/net/: arp.c  bootp.c  dns.c  ethernet.c  icmp6.c  ip.c  tcp.c
holy-core/normal/: autofs.c  charset.c  cmdline.c  crypto.c  menu_entry.c  menu_text.c
holy-core/osdep/: blocklist.c  config.c  cputime.c  dl.c  getroot.c  init.c  platform_unix.c  relpath.c  sleep.c
holy-core/partmap/: bsdlabel.c  dvh.c  gpt.c  plan.c  sun.c  sunpc.c
holy-core/parttool/: msdospart.c
holy-core/script/: argv.c  lexer.c  main.c  script.c
holy-core/term/: gfxterm.c  morse.c  ns8250.c  serial.c  usb_keyboard.c
holy-core/tests/: bswap_test.c  ctz_test.c  div_test.c  example_functional_test.c  legacy_password_test.c  mul_test.c  pbkdf2_test.c  signature_test.c  sleep_test.c  video_checksum.c  videotest_checksum.c
holy-core/video/: bitmap.c  bitmap_scale.c  bochs.c  capture.c  cirrus.c  colors.c  efi_gop.c  sis315_init.c  sm712_init.c
m4/: po.m4  (+50 more)
(+1910 files in other folders)
